--- a/MetricsOnValidationSet_like.ipynb
+++ b/MetricsOnValidationSet_like.ipynb
@@ -330,6 +330,527 @@
    "source": [
     "rce"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pr_df = pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f1/like/val_set_result_sgd.csv',\\\n",
+    "                      names = ['probability_like'])\n",
+    "pr = list(pr_df.probability_like)\n",
+    "prauc = metrics.compute_prauc(pr,gt)\n",
+    "rce = metrics.compute_rce(pr,gt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7011438801749906"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prauc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14.07696126058402"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rce"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pr_df = pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f1/like/val_set_result_als.csv',\\\n",
+    "                      names = ['probability_like'])\n",
+    "pr = list(pr_df.probability_like)\n",
+    "prauc = metrics.compute_prauc(pr,gt)\n",
+    "rce = metrics.compute_rce(pr,gt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5041134175331907"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prauc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-2552.4964896748697"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rce"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pr_df = pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f1/like/val_set_result_sgd.csv',\\\n",
+    "                      names = ['probability_like'])\n",
+    "pr = list(pr_df.probability_like)\n",
+    "prauc = metrics.compute_prauc(pr,gt)\n",
+    "rce = metrics.compute_rce(pr,gt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6533570934918947"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prauc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.4670922514062776"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rce"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pr_df = pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f1/like/val_set_result_sgd.csv',\\\n",
+    "                      names = ['probability_like'])\n",
+    "pr = list(pr_df.probability_like)\n",
+    "prauc = metrics.compute_prauc(pr,gt)\n",
+    "rce = metrics.compute_rce(pr,gt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7046940844007553"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prauc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.939246201573905"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rce"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pr_df = pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f1/like/val_set_result_sgd.csv',\\\n",
+    "                      names = ['probability_like'])\n",
+    "pr = list(pr_df.probability_like)\n",
+    "prauc = metrics.compute_prauc(pr,gt)\n",
+    "rce = metrics.compute_rce(pr,gt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5983952233728442"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prauc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.05303241746408"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rce"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_features = [\"tweet_timestamp\", \"like_timestamp\"]\n",
+    "train = pd.read_csv(open(\"s3://recsys-challenge-2020/training.tsv\"), encoding=\"utf-8\",\n",
+    "                    names = all_features, usecols= [8, 23], sep=\"\\x01\"\n",
+    "                   )\n",
+    "train_sorted = train.sort_values(by=['tweet_timestamp']).reset_index()\n",
+    "n_head = 90\n",
+    "n_tail = 10\n",
+    "train_set = train_sorted.head(int(len(train_sorted)*(n_head/100)))\n",
+    "val_set = train_sorted.tail(int(len(train_sorted)*(n_tail/100))).reset_index()\n",
+    "val_set['like_bool'] = val_set.like_timestamp.fillna(0)\n",
+    "val_set.loc[val_set.like_bool != 0.0, 'like_bool'] = 1.0\n",
+    "gt = list(val_set.like_bool)\n",
+    "pr_df = pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f1/like/val_set_result_als.csv',\\\n",
+    "                      names = ['probability_like'])\n",
+    "pr = list(pr_df.probability_like)\n",
+    "prauc = metrics.compute_prauc(pr,gt)\n",
+    "rce = metrics.compute_rce(pr,gt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6053262004230584"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prauc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-39.56280017442213"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rce"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pr_df = pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f1/like/val_set_result_sgd.csv',\\\n",
+    "                      names = ['probability_like'])\n",
+    "pr = list(pr_df.probability_like)\n",
+    "prauc = metrics.compute_prauc(pr,gt)\n",
+    "rce = metrics.compute_rce(pr,gt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7038440135434026"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prauc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11.532195694777393"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rce"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_features = [\"tweet_timestamp\", \"like_timestamp\"]\n",
+    "train = pd.read_csv(open(\"s3://recsys-challenge-2020/training.tsv\"), encoding=\"utf-8\",\n",
+    "                    names = all_features, usecols= [8, 23], sep=\"\\x01\"\n",
+    "                   )\n",
+    "train_sorted = train.sort_values(by=['tweet_timestamp']).reset_index()\n",
+    "n_head = 90\n",
+    "n_tail = 10\n",
+    "train_set = train_sorted.head(int(len(train_sorted)*(n_head/100)))\n",
+    "val_set = train_sorted.tail(int(len(train_sorted)*(n_tail/100))).reset_index()\n",
+    "val_set['like_bool'] = val_set.like_timestamp.fillna(0)\n",
+    "val_set.loc[val_set.like_bool != 0.0, 'like_bool'] = 1.0\n",
+    "gt = list(val_set.like_bool)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pr_df = pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f1/like/val_set_result_sgd.csv',\\\n",
+    "                      names = ['probability_like'])\n",
+    "pr = list(pr_df.probability_like)\n",
+    "prauc = metrics.compute_prauc(pr,gt)\n",
+    "rce = metrics.compute_rce(pr,gt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6944046264101712"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prauc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12.856038111345114"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rce"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_features = [\"tweet_timestamp\", \"like_timestamp\"]\n",
+    "train = pd.read_csv(open(\"s3://recsys-challenge-2020/training.tsv\"), encoding=\"utf-8\",\n",
+    "                    names = all_features, usecols= [8, 23], sep=\"\\x01\"\n",
+    "                   )\n",
+    "train_sorted = train.sort_values(by=['tweet_timestamp']).reset_index()\n",
+    "n_head = 90\n",
+    "n_tail = 10\n",
+    "train_set = train_sorted.head(int(len(train_sorted)*(n_head/100)))\n",
+    "val_set = train_sorted.tail(int(len(train_sorted)*(n_tail/100))).reset_index()\n",
+    "val_set['like_bool'] = val_set.like_timestamp.fillna(0)\n",
+    "val_set.loc[val_set.like_bool != 0.0, 'like_bool'] = 1.0\n",
+    "gt = list(val_set.like_bool)\n",
+    "pr_df = pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/ffm/f1/val_set.output',\\\n",
+    "                      names = ['probability_like'])\n",
+    "pr = list(pr_df.probability_like)\n",
+    "prauc = metrics.compute_prauc(pr,gt)\n",
+    "rce = metrics.compute_rce(pr,gt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7236165556330649"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prauc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21.187668306011986"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rce"
+   ]
   }
  ],
  "metadata": {
