--- a/classification_type_models/factorization_machines.ipynb
+++ b/classification_type_models/factorization_machines.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,6 +414,93 @@
    ],
    "source": [
     "len(test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Just write the Target for reply"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import s3fs\n",
+    "import boto3\n",
+    "from io import StringIO # python3; python2: BytesIO \n",
+    "import numpy as np\n",
+    "import re\n",
+    "from nltk.tokenize import wordpunct_tokenize\n",
+    "from nltk.tokenize import RegexpTokenizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:12: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  if sys.path[0] == '':\n",
+      "/home/ubuntu/anaconda3/lib/python3.7/site-packages/pandas/core/indexing.py:965: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self.obj[item] = s\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_features = [\"tweet_timestamp\", \"reply_timestamp\"]\n",
+    "\n",
+    "train = pd.read_csv(\"s3://recsys-challenge-2020/training.tsv\", encoding=\"utf-8\",\n",
+    "                    names = all_features, usecols= [8, 20], sep=\"\\x01\")\n",
+    "\n",
+    "train_sorted = train.sort_values(by=['tweet_timestamp']).reset_index()\n",
+    "n_head = 90\n",
+    "n_tail = 10\n",
+    "train_set = train_sorted.head(int(len(train_sorted)*(n_head/100)))\n",
+    "val_set = train_sorted.tail(int(len(train_sorted)*(n_tail/100))).reset_index()\n",
+    "\n",
+    "train_set['reply_bool'] = train_set.reply_timestamp.fillna(0)\n",
+    "train_set.loc[train_set.reply_bool != 0.0, 'reply_bool'] = 1.0\n",
+    "val_set['reply_bool'] = val_set.reply_timestamp.fillna(0)\n",
+    "val_set.loc[val_set.reply_bool != 0.0, 'reply_bool'] = 1.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_set[['reply_bool']].\\\n",
+    "to_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f1/reply/train_set_target.csv',\\\n",
+    "       index = False, header = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_set[['reply_bool']].\\\n",
+    "to_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f1/reply/val_set_target.csv',\\\n",
+    "       index = False, header = False)"
    ]
   }
  ],
