--- a/classification_type_models/scaled_features.ipynb
+++ b/classification_type_models/scaled_features.ipynb
@@ -64,13 +64,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_set.to_csv('f1/like/train_set_scaled.csv')\n",
-    "val_set.to_csv('f1/like/val_set_scaled.csv')"
+    "train_set.to_csv('f1/like/train_set_scaled_0.csv')\n",
+    "val_set.to_csv('f1/like/val_set_scaled_0.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
