--- a/classification_type_models/create_libsvm_input_server-Copy1.ipynb
+++ b/classification_type_models/create_libsvm_input_server-Copy1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,29 +11,108 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "all_features = [\"tweet_type\", \"Language\", \"tweet_timestamp\", \"enaged_with_user_id\",\\\n",
-    "                \"engaged_with_user_follower_count\", \"engaged_with_user_following_count\", \\\n",
-    "                \"engaged_with_user_is_verified\", \"engaging_user_id\", \"enaging_user_follower_count\",\n",
-    "                \"enaging_user_following_count\", \"enaging_user_is_verified\", \"engagee_follows_engager\", \"like_timestamp\"]\n",
-    "\n",
-    "train = pd.read_csv(\"s3://recsys-challenge-2020/training.tsv\", encoding=\"utf-8\",\n",
-    "                    names = all_features, usecols= [6, 7, 8, 9, 10, 11, 12, 14, 15, 16, 17, 19, 23], sep=\"\\x01\")\n",
-    "train['like_bool'] = train.like_timestamp.fillna(0)\n",
-    "train.loc[train.like_bool != 0.0, 'like_bool'] = 1.0\n",
-    "train = train[[\"tweet_type\", \"Language\", \"enaged_with_user_id\",\\\n",
-    "                \"engaged_with_user_follower_count\", \"engaged_with_user_following_count\", \\\n",
-    "                \"engaged_with_user_is_verified\", \"engaging_user_id\", \"enaging_user_follower_count\",\n",
-    "                \"enaging_user_following_count\", \"enaging_user_is_verified\", \"engagee_follows_engager\", \"like_bool\"]]"
+    "### Scale Numerical Features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_features = [\"engaged_with_user_follower_count\", \"engaged_with_user_following_count\", \\\n",
+    "                \"enaging_user_follower_count\", \"enaging_user_following_count\"]\n",
+    "train = pd.read_csv(\"s3://recsys-challenge-2020/training.tsv\", encoding=\"utf-8\",\n",
+    "                    names = all_features, usecols= [10, 11, 15, 16], sep=\"\\x01\")\n",
+    "\n",
+    "test = pd.read_csv(\"s3://recsys-challenge-2020/val_26_04_2020.tsv\", encoding=\"utf-8\",\n",
+    "                    names = all_features, usecols= [10, 11, 15, 16], sep=\"\\x01\")\n",
+    "\n",
+    "train_test_combined = pd.concat([train,test],keys=[0,1])\n",
+    "\n",
+    "from sklearn import preprocessing\n",
+    "\n",
+    "x = train_test_combined.values #returns a numpy array\n",
+    "min_max_scaler = preprocessing.MinMaxScaler()\n",
+    "x_scaled = min_max_scaler.fit_transform(x)\n",
+    "df = pd.DataFrame(x_scaled)\n",
+    "df.index = train_test_combined.index\n",
+    "train_test_combined_scaled = pd.concat([train_test_combined, df], axis = 1)\n",
+    "train_scaled, test_scaled = train_test_combined_scaled.xs(0),train_test_combined_scaled.xs(1)\n",
+    "train_scaled_only = train_scaled[[0, 1, 2, 3]]\n",
+    "test_scaled_only = test_scaled[[0, 1, 2, 3]]\n",
+    "train_scaled_only.columns = ['a', 'b', 'c', 'd']\n",
+    "test_scaled_only.columns = ['a', 'b', 'c', 'd']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Read Train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_features = [\"tweet_type\", \"Language\", \"enaged_with_user_id\",\\\n",
+    "                \"engaged_with_user_is_verified\", \"engaging_user_id\", \"enaging_user_is_verified\",\\\n",
+    "                \"engagee_follows_engager\", \"reply_timestamp\"]\n",
+    "\n",
+    "train = pd.read_csv(\"s3://recsys-challenge-2020/training.tsv\", encoding=\"utf-8\",\n",
+    "                    names = all_features, usecols= [6, 7, 9, 12, 14, 17, 19, 20], sep=\"\\x01\")\n",
+    "train['reply_bool'] = train.reply_timestamp.fillna(0)\n",
+    "train.loc[train.reply_bool != 0.0, 'reply_bool'] = 1.0\n",
+    "train = train[[\"tweet_type\", \"Language\", \"enaged_with_user_id\",\\\n",
+    "                \"engaged_with_user_is_verified\", \"engaging_user_id\", \"enaging_user_is_verified\",\n",
+    "               \"engagee_follows_engager\", \"reply_bool\"]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Read Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_features = [\"tweet_type\", \"Language\", \"enaged_with_user_id\",\\\n",
+    "                \"engaged_with_user_is_verified\", \"engaging_user_id\", \"enaging_user_is_verified\",\\\n",
+    "                \"engagee_follows_engager\", \"reply_timestamp\"]\n",
+    "\n",
+    "test = pd.read_csv(\"s3://recsys-challenge-2020/val_26_04_2020.tsv\", encoding=\"utf-8\",\n",
+    "                    names = all_features, usecols= [6, 7, 9, 12, 14, 17, 19, 20], sep=\"\\x01\")\n",
+    "test['reply_bool'] = test.reply_timestamp.fillna(0)\n",
+    "test.loc[test.reply_bool != 0.0, 'reply_bool'] = 1.0\n",
+    "test = test[[\"tweet_type\", \"Language\", \"enaged_with_user_id\",\n",
+    "                \"engaged_with_user_is_verified\", \"engaging_user_id\", \"enaging_user_is_verified\", \n",
+    "             \"engagee_follows_engager\", \"reply_bool\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df = pd.concat([train_scaled_only, train], axis = 1)\n",
+    "test_df = pd.concat([test_scaled_only, test], axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,13 +123,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "def construct_line(row, columns, dtypes, string_dict, file_obj, index, time1):\n",
     "    \n",
-    "    if index % 100000 == 0:\n",
+    "    if index % 1000000 == 0:\n",
     "        print(str(time.time() - time1) +\": \"+ str(index))\n",
     "        \n",
     "    global categorical_index\n",
@@ -87,34 +166,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Read Test Set"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_features = [\"tweet_type\", \"Language\", \"enaged_with_user_id\",\\\n",
-    "                \"engaged_with_user_follower_count\", \"engaged_with_user_following_count\", \\\n",
-    "                \"engaged_with_user_is_verified\", \"engaging_user_id\", \"enaging_user_follower_count\",\n",
-    "                \"enaging_user_following_count\", \"enaging_user_is_verified\", \"engagee_follows_engager\", \"like_timestamp\"]\n",
-    "\n",
-    "test = pd.read_csv(\"s3://recsys-challenge-2020/val_26_04_2020.tsv\", encoding=\"utf-8\",\n",
-    "                    names = all_features, usecols= [6, 7, 9, 10, 11, 12, 14, 15, 16, 17, 19, 23], sep=\"\\x01\")\n",
-    "test['like_bool'] = test.like_timestamp.fillna(0)\n",
-    "test.loc[test.like_bool != 0.0, 'like_bool'] = 1.0\n",
-    "test = test[[\"tweet_type\", \"Language\", \"enaged_with_user_id\",\\\n",
-    "                \"engaged_with_user_follower_count\", \"engaged_with_user_following_count\", \\\n",
-    "                \"engaged_with_user_is_verified\", \"engaging_user_id\", \"enaging_user_follower_count\",\n",
-    "                \"enaging_user_following_count\", \"enaging_user_is_verified\", \"engagee_follows_engager\", \"like_bool\"]]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Write Train and Test Simultaneously"
    ]
   },
@@ -122,118 +173,33 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "148075238\n",
+      "98.24931406974792: 0\n",
+      "475.55212593078613: 1000000\n"
+     ]
+    }
+   ],
    "source": [
-    "cnames_numerical = list(train.select_dtypes(exclude=['object', 'bool']).columns)\n",
+    "cnames_numerical = list(train_df.select_dtypes(exclude=['object', 'bool']).columns)\n",
     "categorical_index = len(cnames_numerical) - 1 # Categorical indices start from here.\n",
     "string_dict = {}\n",
-    "f_train = open(\"f1/like/train.csv.libfm\", 'a')\n",
-    "print(len(train))\n",
+    "f_train_df = open(\"f1/like/train_df.csv\", 'a')\n",
+    "print(len(train_df))\n",
     "time1 = time.time()\n",
-    "train.apply(lambda x : construct_line(x, train.columns, train.dtypes, string_dict, f_train, x.name,\\\n",
+    "train_df.apply(lambda x : construct_line(x, train_df.columns, train_df.dtypes, string_dict, f_train_df, x.name,\\\n",
     "                                         time1), axis = 1)\n",
-    "f_train.close()\n",
-    "print(len(test))\n",
-    "f_test = open(\"f1/like/test.csv.libfm\", 'a')\n",
-    "test.apply(lambda x : construct_line(x, test.columns, test.dtypes, string_dict, f_test, x.name,\\\n",
+    "f_train_df.close()\n",
+    "print(len(test_df))\n",
+    "f_test_df = open(\"f1/like/test_df.csv\", 'a')\n",
+    "test_df.apply(lambda x : construct_line(x, test_df.columns, test_df.dtypes, string_dict, f_test_df, x.name,\\\n",
     "                                       time1), axis = 1)\n",
-    "f_test.close()"
+    "f_test_df.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "string_dict"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Print Statements"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_set.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "val_set.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_set.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "val_set.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def construct_line_beta(row, columns, dtypes, string_dict, categorical_index):\n",
-    "    numerical_index = 0\n",
-    "    new_line = str(row[-1])+ \" \"\n",
-    "    for i in range(len(columns) - 1):\n",
-    "        if ((dtypes[i] == object) or (dtypes[i] == bool)):\n",
-    "            if (dtypes[i] == bool):\n",
-    "                row[i] =  bool_to_str(row[i])\n",
-    "            values = string_dict[columns[i]]\n",
-    "            if row[i] in [x[0] for x in values]:\n",
-    "                index = [x[0] for x in values].index(row[i])\n",
-    "                value_index = values[index][1]\n",
-    "                new_line = new_line + str(value_index)+\":1 \"\n",
-    "            else:\n",
-    "                value_index = sum(len(v) for v in string_dict.values()) + categorical_index\n",
-    "                new_line = new_line + str(value_index)+\":1 \"\n",
-    "                values.append((row[i], value_index))\n",
-    "                string_dict[columns[i]] = values\n",
-    "        else:\n",
-    "            new_line = new_line + str(numerical_index) + \":\" +str(row[i])+\" \"\n",
-    "            numerical_index = numerical_index + 1\n",
-    "    print(new_line)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### For Stackoverflow"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
