--- a/MetricsOnValidationSet_like.ipynb
+++ b/MetricsOnValidationSet_like.ipynb
@@ -813,6 +813,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### ./ffm-train -p ../f1/val_set.ffm -l 0.00002 --auto-stop -s 48 ../f1/train_set.ffm\n",
+    "##### ./ffm-predict ../f1/val_set.ffm  train_set.ffm.model  ../f1/val_set.output"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
