--- a/MetricsOnValidationSet_like.ipynb
+++ b/MetricsOnValidationSet_like.ipynb
@@ -859,6 +859,15 @@
    "source": [
     "rce"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Next thing to try: ALS with increased number of iterations\n",
+    "\n",
+    "##### ./libFM -task c -train /home/ubuntu/recsys_challenge_2020/classification_type_models/f1/like/train_set_replaced.csv.libfm -test /home/ubuntu/recsys_challenge_2020/classification_type_models/f1/like/val_set_replaced.csv.libfm -dim 1,1,50 -method mcmc -iter 100  -init_stdev 5  -out /home/ubuntu/recsys_challenge_2020/classification_type_models/f1/like/val_set_result_als.csv"
+   ]
   }
  ],
  "metadata": {
