--- a/MetricsOnValidationSet_reply.ipynb
+++ b/MetricsOnValidationSet_reply.ipynb
@@ -418,6 +418,30 @@
    "source": [
     "rce"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### On Leaderboard:\n",
+    "##### ./libFM -task c -train /home/ubuntu/recsys_challenge_2020/classification_type_models/f1/reply/train_df.csv -test /home/ubuntu/recsys_challenge_2020/classification_type_models/f1/reply/test_df.csv -dim 1,1,16 -method sgd -iter 10 -learn_rate 0.01 -init_stdev 0.1 -regular '0.028,0.01,0.01' -out /home/ubuntu/recsys_challenge_2020/classification_type_models/f1/reply/test_df_result_sgd.csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Next thing to try by increasing number of iterations with SGD:\n",
+    "##### ./libFM -task c -train /home/ubuntu/recsys_challenge_2020/classification_type_models/f1/reply/train_set.csv.libfm -test /home/ubuntu/recsys_challenge_2020/classification_type_models/f1/reply/val_set.csv.libfm -dim 1,1,16 -method sgd -iter 20 -learn_rate 0.01 -init_stdev 0.1 -regular '0.028,0.01,0.01' -out /home/ubuntu/recsys_challenge_2020/classification_type_models/f1/reply/val_set_result_sgd.csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  With ALS with right regularization and parameters\n",
+    "#####  ./libFM -task c -train /home/ubuntu/recsys_challenge_2020/classification_type_models/f1/reply/train_set.csv.libfm -test /home/ubuntu/recsys_challenge_2020/classification_type_models/f1/reply/val_set.csv.libfm -dim 1,1,16 -method als -iter 12  -init_stdev 0.1 -regular '0.028,0.01,0.01' -out /home/ubuntu/recsys_challenge_2020/classification_type_models/f1/reply/val_set_result_als.csv"
+   ]
   }
  ],
  "metadata": {
