--- a/classification_type_models/ffm_basefile.ipynb
+++ b/classification_type_models/ffm_basefile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,9 @@
    "source": [
     "val = pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f1/reply/val_set.csv.libfm'\\\n",
     "                  , sep = ' ', header = None\\\n",
-    "                 , usecols = [1,2,3,4,5,6,7,8,9,10,11])"
+    "                 , usecols = [1,2,3,4,5,6,7,8,9,10,11])\n",
+    "train = pd.read_csv(\"s3://recsys-challenge-2020/training.tsv\", encoding=\"utf-8\",\n",
+    "                    names = all_features, usecols= [1, 6, 7, 8, 9, 10, 11, 12, 14, 15, 16, 17, 19, 23], sep=\"\\x01\")"
    ]
   },
   {
@@ -86,6 +88,42 @@
    "source": [
     "chunksize = 10 ** 7\n",
     "for chunk in pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f1/reply/train_set.csv.libfm'\\\n",
+    "                  , sep = ' ', header = None\\\n",
+    "                 , usecols = [1,2,3,4,5,6,7,8,9,10,11], chunksize=chunksize):\n",
+    "    base_chunk = pd.DataFrame({col:str(int(col) - 1)+':' for col in chunk}, index=chunk.index) + chunk.astype(str) \n",
+    "    base_chunk.to_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/ffm/f1/base_train.csv',\\\n",
+    "                index = False, header = False, sep = ' ',  mode='a')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train and Test FM -> FFM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f1/reply/test_df.csv'\\\n",
+    "                  , sep = ' ', header = None\\\n",
+    "                 , usecols = [1,2,3,4,5,6,7,8,9,10,11])\n",
+    "base_test = pd.DataFrame({col:str(int(col) - 1)+':' for col in test}, index=test.index) + test.astype(str)\n",
+    "base_test.to_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/ffm/f1/base_test.csv',\\\n",
+    "                index = False, header = False, sep = ' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chunksize = 10 ** 7\n",
+    "for chunk in pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f1/reply/train_df.csv'\\\n",
     "                  , sep = ' ', header = None\\\n",
     "                 , usecols = [1,2,3,4,5,6,7,8,9,10,11], chunksize=chunksize):\n",
     "    base_chunk = pd.DataFrame({col:str(int(col) - 1)+':' for col in chunk}, index=chunk.index) + chunk.astype(str) \n",
