--- a/classification_type_models/train_ground_truth_labels.ipynb
+++ b/classification_type_models/train_ground_truth_labels.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,6 +42,83 @@
     "train['like_bool'] = train.like_timestamp.fillna(0)\n",
     "train.loc[train.like_bool != 0.0, 'like_bool'] = 1.0\n",
     "train[['like_bool']].to_csv('/home/ubuntu/recsys_challenge_2020/train_ground_truth/like_gt.csv',\\\n",
+    "                             index = False, header = False )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:12: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  if sys.path[0] == '':\n",
+      "/home/ubuntu/anaconda3/lib/python3.7/site-packages/pandas/core/indexing.py:965: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self.obj[item] = s\n",
+      "/home/ubuntu/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:15: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  from ipykernel import kernelapp as app\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_features = [\"tweet_timestamp\", \"retweet_with_comment_timestamp\"]\n",
+    "train = pd.read_csv(\"s3://recsys-challenge-2020/training.tsv\", encoding=\"utf-8\",\n",
+    "                    names = all_features, usecols= [ 8, 22], sep=\"\\x01\"\n",
+    "                   )\n",
+    "train_sorted = train.sort_values(by=['tweet_timestamp']).reset_index()\n",
+    "n_head = 90\n",
+    "n_tail = 10\n",
+    "train_set = train_sorted.head(int(len(train_sorted)*(n_head/100)))\n",
+    "val_set = train_sorted.tail(int(len(train_sorted)*(n_tail/100)))\n",
+    "\n",
+    "\n",
+    "train_set['retweet_with_comment_bool'] = train_set.retweet_with_comment_timestamp.fillna(0)\n",
+    "train_set.loc[train_set.retweet_with_comment_bool != 0.0, 'retweet_with_comment_bool'] = 1.0\n",
+    "\n",
+    "val_set['retweet_with_comment_bool'] = val_set.retweet_with_comment_timestamp.fillna(0)\n",
+    "val_set.loc[val_set.retweet_with_comment_bool != 0.0, 'retweet_with_comment_bool'] = 1.0\n",
+    "\n",
+    "# val_set['retweet_with_comment_bool'] = val_set.retweet_with_comment_timestamp.fillna(0)\n",
+    "\n",
+    "train_set[['retweet_with_comment_bool']].to_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f1/retweet_with_comment/train_set_gt.csv',\\\n",
+    "                             index = False, header = False )\n",
+    "\n",
+    "val_set[['retweet_with_comment_bool']].to_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f1/retweet_with_comment/val_set_gt.csv',\\\n",
+    "                             index = False, header = False )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_features = [\"retweet_with_comment_timestamp\"]\n",
+    "train = pd.read_csv(\"s3://recsys-challenge-2020/training.tsv\", encoding=\"utf-8\",\n",
+    "                    names = all_features, usecols= [ 22], sep=\"\\x01\"\n",
+    "                   )\n",
+    "\n",
+    "train['retweet_with_comment_bool'] = train.retweet_with_comment_timestamp.fillna(0)\n",
+    "train.loc[train.retweet_with_comment_bool != 0.0, 'retweet_with_comment_bool'] = 1.0\n",
+    "\n",
+    "train[['retweet_with_comment_bool']].to_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f1/retweet_with_comment/train_gt.csv',\\\n",
     "                             index = False, header = False )"
    ]
   }
