--- a/MetricsOnValidationSet_retweet_comment.ipynb
+++ b/MetricsOnValidationSet_retweet_comment.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "unable to import 'smart_open.gcs', disabling that module\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import s3fs\n",
@@ -55,6 +63,145 @@
     "print(prauc)\n",
     "print(rce)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_features = [\"tweet_timestamp\", \"retweet_with_comment_timestamp\"]\n",
+    "train = pd.read_csv(open(\"s3://recsys-challenge-2020/training.tsv\"), encoding=\"utf-8\",\n",
+    "                    names = all_features, usecols= [8, 22], sep=\"\\x01\"\n",
+    "                   )\n",
+    "train_sorted = train.sort_values(by=['tweet_timestamp']).reset_index()\n",
+    "n_head = 90\n",
+    "n_tail = 10\n",
+    "train_set = train_sorted.head(int(len(train_sorted)*(n_head/100)))\n",
+    "val_set = train_sorted.tail(int(len(train_sorted)*(n_tail/100))).reset_index()\n",
+    "val_set['retweet_with_comment_bool'] = val_set.retweet_with_comment_timestamp.fillna(0)\n",
+    "val_set.loc[val_set.retweet_with_comment_bool != 0.0, 'retweet_with_comment_bool'] = 1.0\n",
+    "gt = list(val_set.retweet_with_comment_bool)\n",
+    "pr_df = pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f1/retweet_with_comment/val_set_result_sgd.csv',\\\n",
+    "                      names = ['probability_retweet_with_comment'])\n",
+    "pr = list(pr_df.probability_retweet_with_comment)\n",
+    "prauc = metrics.compute_prauc(pr,gt)\n",
+    "rce = metrics.compute_rce(pr,gt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.024704815192162485"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prauc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-4.816604111383782"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rce"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_features = [\"tweet_timestamp\", \"retweet_with_comment_timestamp\"]\n",
+    "train = pd.read_csv(open(\"s3://recsys-challenge-2020/training.tsv\"), encoding=\"utf-8\",\n",
+    "                    names = all_features, usecols= [8, 22], sep=\"\\x01\"\n",
+    "                   )\n",
+    "train_sorted = train.sort_values(by=['tweet_timestamp']).reset_index()\n",
+    "n_head = 90\n",
+    "n_tail = 10\n",
+    "train_set = train_sorted.head(int(len(train_sorted)*(n_head/100)))\n",
+    "val_set = train_sorted.tail(int(len(train_sorted)*(n_tail/100))).reset_index()\n",
+    "val_set['retweet_with_comment_bool'] = val_set.retweet_with_comment_timestamp.fillna(0)\n",
+    "val_set.loc[val_set.retweet_with_comment_bool != 0.0, 'retweet_with_comment_bool'] = 1.0\n",
+    "gt = list(val_set.retweet_with_comment_bool)\n",
+    "pr_df = pd.read_csv\\\n",
+    "('/home/ubuntu/recsys_challenge_2020/classification_type_models/ffm/retweet_with_comment/val_set.output',\\\n",
+    "                      names = ['probability_retweet_with_comment'])\n",
+    "pr = list(pr_df.probability_retweet_with_comment)\n",
+    "prauc = metrics.compute_prauc(pr,gt)\n",
+    "rce = metrics.compute_rce(pr,gt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### ./ffm-train -p ../retweet_with_comment/val_set.ffm -l 0.00002 --auto-stop -s 95 ../retweet_with_comment/train_set.ffm\n",
+    "##### Auto-stop. Use model at 3th iteration."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0329026409360537"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prauc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.55414524871225"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rce"
+   ]
   }
  ],
  "metadata": {
@@ -73,7 +220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
