--- a/classification_type_models/train_ground_truth_labels.ipynb
+++ b/classification_type_models/train_ground_truth_labels.ipynb
@@ -121,6 +121,28 @@
     "train[['retweet_with_comment_bool']].to_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f1/retweet_with_comment/train_gt.csv',\\\n",
     "                             index = False, header = False )"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Retweet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_features = [ \"retweet_timestamp\"]\n",
+    "train = pd.read_csv(\"s3://recsys-challenge-2020/training.tsv\", encoding=\"utf-8\",\n",
+    "                    names = all_features, usecols= [21], sep=\"\\x01\")\n",
+    "train['retweet_bool'] = train.retweet_timestamp.fillna(0)\n",
+    "train.loc[train.retweet_bool != 0.0, 'retweet_bool'] = 1.0\n",
+    "train[['retweet_bool']].to_csv('/home/ubuntu/recsys_challenge_2020/train_ground_truth/retweet_gt.csv',\\\n",
+    "                             index = False, header = False )"
+   ]
   }
  ],
  "metadata": {
